--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 body {
     font-family: 'Roboto', sans-serif;
     line-height: 1.6;
-    background-color: #f7f9e1; /* Greenish yellow background for the body */
+    background-color: #1E90FF; /* Greenish yellow background for the body */
     color: #333;
     padding: 0 5%; /* Ensure the body has padding on both sides for all pages */
 }
